apps/workloads/games/satisfactory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satisfactory
  namespace: games
  labels:
    pool: dmz-lb-pool
  annotations:
    lbipam.cilium.io/ips: "10.20.1.150"
spec:
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  externalTrafficPolicy: Local
  selector:
    app: satisfactory
  ports:
    - name: game-udp
      port: 7777
      targetPort: 7777
      protocol: UDP
    - name: game-tcp
      port: 7777
      targetPort: 7777
      protocol: TCP
